# axium-tutorial

./: .env  .env.example  CLAUDE.md  DSPy.md  README.md  main.py  pyproject.toml  requirements.txt  run_backend.py
backend/: README.md  app.py  config.py
backend/dspy_modules/: agentic_analyzer.py  recipe_analyzer.py  signatures.py
backend/models/: schemas.py
backend/tools/: nutrition_calculator.py
